// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button / appearance flat 1`] = `
<button
  data-css-a3vwj=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance primary 1`] = `
<button
  data-css-el86ax=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance secondary 1`] = `
<button
  data-css-1tjb7o8=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / appearance stroke 1`] = `
<button
  data-css-867vqf=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / as link default 1`] = `
<a
  data-css-el86ax=""
  disabled={false}
  href="https://duckduckgo.com"
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click as link
  </span>
</a>
`;

exports[`Storyshots Button / as link with icon 1`] = `
<a
  data-css-zkf6c1=""
  disabled={false}
  href="https://duckduckgo.com"
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="pencil icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431 2 2 0 00-.593-1.433 1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Click as link
  </span>
</a>
`;

exports[`Storyshots Button / disabled all 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <button
    data-css-el86ax=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      primary
    </span>
  </button>
  <button
    data-css-1jhwdxf=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      primary disabled
    </span>
  </button>
  <button
    data-css-1tjb7o8=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      secondary
    </span>
  </button>
  <button
    data-css-e9emql=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      secondary disabled
    </span>
  </button>
  <button
    data-css-867vqf=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      stroke
    </span>
  </button>
  <button
    data-css-jv2mlo=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      stroke disabled
    </span>
  </button>
  <button
    data-css-a3vwj=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      flat
    </span>
  </button>
  <button
    data-css-1pfyu75=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      flat disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button / disabled with icon 1`] = `
<button
  data-css-1fk3xbf=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="pencil icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.276 15.862L5 19l3.14-.275 8.085-8.086-2.863-2.863-8.086 8.086zM17.64 9.225l.767-.767a2 2 0 00.592-1.431 2 2 0 00-.593-1.433 1.996 1.996 0 00-1.43-.591c-.545 0-1.048.208-1.433.593l-.766.766 2.863 2.863zm-.665-6.222c1.076 0 2.086.418 2.845 1.177A3.997 3.997 0 0121 7.027a4 4 0 01-1.179 2.846L9.411 20.282a.995.995 0 01-.464.263l-4.705.427a1.002 1.002 0 01-1.213-1.213l.427-4.704a.998.998 0 01.263-.464L14.13 4.18a3.997 3.997 0 012.845-1.179z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Disabled
  </span>
</button>
`;

exports[`Storyshots Button / icon flat 1`] = `
<button
  data-css-x8zpqn=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon large 1`] = `
<button
  data-css-1s48g55=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon left 1`] = `
<button
  data-css-zkf6c1=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon lone flat large 1`] = `
<button
  data-css-1u76e31=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone flat medium 1`] = `
<button
  data-css-twrzad=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone flat small 1`] = `
<button
  data-css-1c23eje=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone flat xSmall 1`] = `
<button
  data-css-cmendn=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary large 1`] = `
<button
  data-css-19nz5qt=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary medium 1`] = `
<button
  data-css-14faee9=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary small 1`] = `
<button
  data-css-1a642rh=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone primary xSmall 1`] = `
<button
  data-css-54skdq=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary large 1`] = `
<button
  data-css-16f0rt0=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary medium 1`] = `
<button
  data-css-1isgb6d=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary small 1`] = `
<button
  data-css-2jepz4=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone secondary xSmall 1`] = `
<button
  data-css-pq49lq=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke large 1`] = `
<button
  data-css-8ecb3k=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke medium 1`] = `
<button
  data-css-1y5uahs=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke small 1`] = `
<button
  data-css-kmu6t8=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon lone stroke xSmall 1`] = `
<button
  data-css-hziwng=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / icon medium 1`] = `
<button
  data-css-zkf6c1=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon primary 1`] = `
<button
  data-css-zkf6c1=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon right 1`] = `
<button
  data-css-1c12ih0=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-8b1vtw=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon secondary 1`] = `
<button
  data-css-1sc2e3=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon small 1`] = `
<button
  data-css-p6p8uk=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon stroke 1`] = `
<button
  data-css-1o13tha=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / icon vertically aligned rows 1`] = `
<div>
  <button
    data-css-zkf6c1=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With icon
    </span>
  </button>
  <button
    data-css-el86ax=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Without icon
    </span>
  </button>
</div>
`;

exports[`Storyshots Button / icon xSmall 1`] = `
<button
  data-css-1e3qamj=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    With Icon
  </span>
</button>
`;

exports[`Storyshots Button / in row same vertical height 1`] = `
<div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-2jszr5=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1v1ebkl=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1m8bv6x=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-3eyabh=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-n38nmt=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-18l3mr2=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1a10mji=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1csnf40=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-el86ax=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1tjb7o8=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-867vqf=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-a3vwj=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "auto auto auto auto",
        "marginBottom": "8px",
      }
    }
  >
    <button
      data-css-mq99zh=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-1d80llr=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-npqdvw=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
    <button
      data-css-srcla4=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button / loading flat 1`] = `
<button
  data-css-srcla4=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading large 1`] = `
<button
  data-css-mq99zh=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading lone icon 1`] = `
<button
  data-css-19nz5qt=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-y80vay=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  />
</button>
`;

exports[`Storyshots Button / loading medium 1`] = `
<button
  data-css-el86ax=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading no icon, hidden text 1`] = `
<button
  data-css-mq99zh=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Text doesnt show when loading if no icon
  </span>
</button>
`;

exports[`Storyshots Button / loading primary 1`] = `
<button
  data-css-mq99zh=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading secondary 1`] = `
<button
  data-css-1d80llr=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading small 1`] = `
<button
  data-css-n38nmt=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading stroke 1`] = `
<button
  data-css-npqdvw=""
  disabled={true}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <span
        data-css-1nq0vnb=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / loading xSmall 1`] = `
<button
  data-css-2jszr5=""
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-1gzzcm2=""
    >
      <span
        data-css-15l7w9e=""
      />
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Loading...
  </span>
</button>
`;

exports[`Storyshots Button / override styles with className 1`] = `
<button
  className={
    Object {
      "data-css-jxpnuu": "",
    }
  }
  data-css-zkf6c1=""
  disabled={false}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Green Button
  </span>
</button>
`;

exports[`Storyshots Button / override styles with style 1`] = `
<button
  data-css-zkf6c1=""
  disabled={false}
  style={
    Object {
      "background": "red",
    }
  }
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Red Button
  </span>
</button>
`;

exports[`Storyshots Button / props pass through anchor supports download 1`] = `
<a
  data-css-el86ax=""
  disabled={false}
  download={true}
  href="/somewhere"
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Link with download
  </span>
</a>
`;

exports[`Storyshots Button / props pass through aria-expanded 1`] = `
<button
  aria-expanded={true}
  data-css-el86ax=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    aria-expanded
  </span>
</button>
`;

exports[`Storyshots Button / props pass through button doesnt support download 1`] = `
<button
  data-css-el86ax=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Button with download
  </span>
</button>
`;

exports[`Storyshots Button / props pass through data-something 1`] = `
<button
  data-css-el86ax=""
  data-something="wow"
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Custom data attributes
  </span>
</button>
`;

exports[`Storyshots Button / props pass through not supported 1`] = `
<button
  data-css-el86ax=""
  disabled={false}
  onMouseOver={[Function]}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Should not mouseover
  </span>
</button>
`;

exports[`Storyshots Button / props pass through role 1`] = `
<button
  data-css-el86ax=""
  disabled={false}
  role="link"
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Role Link
  </span>
</button>
`;

exports[`Storyshots Button / props pass through title 1`] = `
<button
  data-css-el86ax=""
  disabled={false}
  style={Object {}}
  title="My caption"
>
  <span
    data-css-15b13by=""
  >
    With title
  </span>
</button>
`;

exports[`Storyshots Button / size large 1`] = `
<button
  data-css-mq99zh=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size medium 1`] = `
<button
  data-css-el86ax=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size small 1`] = `
<button
  data-css-n38nmt=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / size xSmall 1`] = `
<button
  data-css-2jszr5=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Click me
  </span>
</button>
`;

exports[`Storyshots Button / theme nested 1`] = `
Array [
  <button
    data-css-a3vwj=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      dark
    </span>
  </button>,
  <button
    data-css-1t1nz54=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      light
    </span>
  </button>,
  <button
    data-css-a3vwj=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      dark
    </span>
  </button>,
]
`;

exports[`Storyshots Button / with onClick clicks once 1`] = `
<button
  data-css-zkf6c1=""
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  <div
    data-css-1mgd019=""
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="check icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
        />
      </svg>
    </div>
  </div>
  <span
    data-css-15b13by=""
  >
    Clicks once
  </span>
</button>
`;

exports[`Storyshots Button / with ref ref to handle focus 1`] = `
<button
  data-css-el86ax=""
  disabled={false}
  style={Object {}}
>
  <span
    data-css-15b13by=""
  >
    Should be focused
  </span>
</button>
`;
